Версия 3.0
Сделать историю посещений неограниченной по размеру.
Избавиться от повторных просмотров в истории.
Добавить метод void remove(int id) для удаления задачи из просмотра.
Добавить вызов метода remove при удалении задач, чтобы они удалялись также из истории просмотров.
Добавить метод removeNode(Node node) для удаления ноды.
Изменить список historyTasks на стандартную HashMap.
Изменить метод getHistory — для вывода всех задач из списка в обычный ArrayList.
Добавить метод linkLast, для добавления задачи в конец списка истории.
Создать отдельный класс Node для узла списка.
Добавить проверку на null подзадачи эпика при удалении эпика.
Изменить логику сохранения id поздадач у эпика